Change name for DBService

--- a/Pages/AddBill.razor
+++ b/Pages/AddBill.razor
@@ -57,7 +57,7 @@
     protected NotificationService NotificationService { get; set; }
 
     [Inject]
-    public DBService dBService { get; set; }
+    public BillsDBService dBService { get; set; }
 
     protected string errorMessage {get;set;}
 
