--- a/Pages/EditBill.razor
+++ b/Pages/EditBill.razor
@@ -49,7 +49,7 @@
     [Inject]
     protected NotificationService NotificationService { get; set; }
     [Inject]
-    public DBService dBService { get; set; }
+    public BillsDBService dBService { get; set; }
 
     [Parameter]
     public int year { get; set; }
