--- a/Pages/Bills.razor
+++ b/Pages/Bills.razor
@@ -55,7 +55,7 @@
     protected NotificationService NotificationService { get; set; }
 
     [Inject]
-    public DBService dBService { get; set; }
+    public BillsDBService dBService { get; set; }
 
     protected IEnumerable<BillRecord> records;
 
