Add userprofile setting page

--- a/Pages/AddBill.razor
+++ b/Pages/AddBill.razor
@@ -71,6 +71,7 @@
 
     protected async Task FormSubmit()
     {
+        errorVisible = false;
         try
         {
             await dBService.CreateRecord(billRecord);
