--- a/Pages/EditBill.razor
+++ b/Pages/EditBill.razor
@@ -5,7 +5,6 @@
 <RadzenColumn SizeMD=12>
     <RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Danger" Visible="@errorVisible">@errorMessage</RadzenAlert>
     <RadzenTemplateForm TItem="BillRecord" Data="@billRecord" Visible="@(billRecord != null)" Submit="@FormSubmit">
-        
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
                 <RadzenLabel Text="Electricity Usage" Component="ElectricityUsage" style="width: 100%" />
@@ -68,6 +67,8 @@
 
     protected async Task FormSubmit()
     {
+        errorVisible = false;
+
         try
         {
             await dBService.UpdateRecord(billRecord);
@@ -80,8 +81,5 @@
         }
     }
 
-    protected async Task CancelButtonClick(MouseEventArgs args)
-    {
-        DialogService.Close(null);
-    }
+    protected async Task CancelButtonClick(MouseEventArgs args) => DialogService.Close(null);
 }
