--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -11,22 +11,17 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-home" aria-hidden="true"></span> Visualization
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="bills">
                 <span class="oi oi-book" aria-hidden="true"></span> Bills
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="settings">
+                <span class="oi oi-people" aria-hidden="true"></span> UserProfile
             </NavLink>
         </div>
     </nav>
