--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,7 +6,7 @@
 @using Microsoft.JSInterop
 @using GreenITBlazor
 @using GreenITBlazor.Shared
-@using GreenITBlazor.Data
+@using GreenITBlazor.Services
 @using GreenITBlazor.Models
 @using Radzen
 @using Radzen.Blazor
