--- a/Pages/Bills.razor
+++ b/Pages/Bills.razor
@@ -1,5 +1,5 @@
-﻿
-@page "/bills"
+﻿@page "/bills"
+
 <PageTitle>Bills</PageTitle>
 <RadzenStack>
     <RadzenRow AlignItems="AlignItems.Center">
@@ -66,7 +66,7 @@
     {
         try
         {
-            records = await dBService.GetRecords();
+            records = await dBService.GetRecords(true);
             count = records.Count();
         }
         catch (System.Exception ex)
