--- a/Pages/AddBill.razor
+++ b/Pages/AddBill.razor
@@ -9,7 +9,7 @@
                 <RadzenLabel Text="Year" Component="Year" style="width: 100%" />
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
-                <RadzenTextBox style="display: block; width: 100%" @bind-Value="@billRecord.YearStr" Name="Year" />
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.Year" Name="Year" ShowUpDown="false" />
                 <RadzenRequiredValidator Component="Year" Text="Year is required" />
             </RadzenColumn>
         </RadzenRow>
@@ -18,7 +18,8 @@
                 <RadzenLabel Text="Electricity Usage (kWh)" Component="ElectricityUsage" style="width: 100%" />
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
-                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.ElectricityUsage" Name="Electricity Usage" />
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.ElectricityUsage" Name="ElectricityUsage" Placeholder="0.0" ShowUpDown="false" />
+                <RadzenRequiredValidator Component="ElectricityUsage" Text="Electricity usage is required" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
@@ -26,15 +27,8 @@
                 <RadzenLabel Text="Gas Usage (mj)" Component="GasUsage" style="width: 100%" />
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
-                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.GasUsage" Name="Gas Usage" />
-            </RadzenColumn>
-        </RadzenRow>
-        <RadzenRow style="margin-bottom: 1rem">
-            <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Carbon Emission (kg)" Component="CarbonEmission" style="width: 100%" />
-            </RadzenColumn>
-            <RadzenColumn SizeMD="9">
-                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.CarbonEmission" Name="Carbon Emission" />
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.GasUsage" Name="GasUsage" Placeholder="0.0" ShowUpDown="false" />
+                <RadzenRequiredValidator Component="GasUsage" Text="Gas usage is required" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.End" Gap="0.5rem">
@@ -83,8 +77,8 @@
         errorVisible = false;
         try
         {
-            billRecord.Year = int.Parse(billRecord.YearStr);
-            await dBService.CreateRecord(billRecord);
+            billRecord.YearStr = billRecord.Year.ToString();
+            await dBService.CreateBillRecordAsync(billRecord);
             DialogService.Close(billRecord);
         }
         catch (Exception ex)
