--- a/Pages/Bills.razor
+++ b/Pages/Bills.razor
@@ -66,12 +66,12 @@
     {
         try
         {
-            records = await dBService.GetRecords(true);
+            records = await dBService.GetBillRecordsAsync(true);
             count = records.Count();
         }
         catch (System.Exception ex)
         {
-            NotificationService.Notify(new NotificationMessage() { Severity = NotificationSeverity.Error, Summary = $"Error", Detail = $"Unable to load bills" });
+            NotificationService.Notify(new NotificationMessage() { Severity = NotificationSeverity.Error, Summary = $"Error", Detail = $"Unable to load bills. {ex.Message}" });
         }
     }
 
@@ -93,7 +93,7 @@
         {
             if (await DialogService.Confirm("Are you sure you want to delete this record?") == true)
             {
-                string deleteResult = await dBService.DeletetRecord(billRecord);
+                string deleteResult = await dBService.DeletetBillRecordAsync(billRecord);
 
                 if (deleteResult == "OK")
                 {
