--- a/Pages/EditBill.razor
+++ b/Pages/EditBill.razor
@@ -10,7 +10,8 @@
                 <RadzenLabel Text="Electricity Usage (kWh)" Component="ElectricityUsage" style="width: 100%" />
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
-                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.ElectricityUsage" Name="Electricity Usage" />
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.ElectricityUsage" Name="ElectricityUsage" Placeholder="0.0" ShowUpDown="false" />
+                <RadzenRequiredValidator Component="ElectricityUsage" Text="Electricity usage is required" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
@@ -18,15 +19,8 @@
                 <RadzenLabel Text="Gas Usage (mj)" Component="GasUsage" style="width: 100%" />
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
-                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.GasUsage" Name="Gas Usage" />
-            </RadzenColumn>
-        </RadzenRow>
-        <RadzenRow style="margin-bottom: 1rem">
-            <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Carbon Emission (kg)" Component="CarbonEmission" style="width: 100%" />
-            </RadzenColumn>
-            <RadzenColumn SizeMD="9">
-                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.CarbonEmission" Name="Carbon Emission" />
+                <RadzenNumeric style="display: block; width: 100%" @bind-Value="@billRecord.GasUsage" Name="GasUsage" Placeholder="0.0" ShowUpDown="false" />
+                <RadzenRequiredValidator Component="GasUsage" Text="Gas usage is required" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.End" Gap="0.5rem">
@@ -67,7 +61,7 @@
     protected override async Task OnInitializedAsync()
     {
         errorMessage = "";
-        billRecord = await dBService.GetRecord(year);
+        billRecord = await dBService.GetBillRecordAsync(year);
     }
 
     protected bool errorVisible;
@@ -79,7 +73,7 @@
 
         try
         {
-            await dBService.UpdateRecord(billRecord);
+            await dBService.UpdateBillRecordAsync(billRecord);
             DialogService.Close(billRecord);
         }
         catch (Exception ex)
@@ -89,5 +83,5 @@
         }
     }
 
-    protected async Task CancelButtonClick(MouseEventArgs args) => DialogService.Close(null);
+    protected void CancelButtonClick(MouseEventArgs args) => DialogService.Close(null);
 }
