--- a/Pages/Settings.razor
+++ b/Pages/Settings.razor
@@ -19,7 +19,8 @@
                 <RadzenLabel Text="Postcode" Component="Postcode" style="width: 100%" />
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
-                <RadzenTextBox style="display: block; width: 100%" @bind-Value="@userProfile.Postcode" Name="Postcode" />
+                <RadzenTextBox style="display: block; width: 100%" @bind-Value="@userProfile.Postcode" Name="Postcode" ShowUpDown="false" />
+                <RadzenRequiredValidator Component="Postcode" Text="Postcode is required" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
