--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -39,4 +39,7 @@
 
     [Inject]
     protected NotificationService NotificationService { get; set; }
+
+    bool isFirstOpen = Preferences.Default.Get("firstopen", true);
+    bool loggedIn = true;
 }
